# TAJIVE

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README  TAJIVEdecomp.cbp  TAJIVEmain.cpp  cmake_install.cmake
Matlab/RankEstimation/: DEMO.m  DEMO_denoising.m  read_me
Matlab/RankEstimation/Functions/: MDL.m~  calc_curve.m  score.m
Matlab/RankEstimation/Functions_for_HOSVD_denoising/: SCORE_denoiser.m~  calc_dist_make_patches.c  calc_dist_make_patches.mexa64  find_similar_patches.m  find_similar_patches_mex.m
Matlab/TAJIVECode/: HeatmapVisualQF.m  JIVErandnullQF.m  RandDirSSVMJ.m  TAJIVEInitExtract.m  TAJIVEJointSelect.m  TAJIVEMain.m  TAJIVEReconstruct.m
Matlab/TensorReg-master/: TensorReg.prj  array_resize.m  demo_kruskal.m  demo_tucker.m  kruskal_reg.m  kruskal_sparsereg.m  matrix_sparsereg.m  tpca.m  tucker_reg.m  tucker_sparsereg.m
Matlab/TensorReg-master/private/: glmfit_priv.m  lsq_thresholding.m  penalty_function.m  svt.m
Matlab/tensorlab/: amino.mat  slice3.m
data/: Xtoy.csv
dependecies/armadillo/: ArmadilloConfig.cmake  CMakeCache.txt  Makefile  README.md  cmake_install.cmake  install_manifest.txt  libarmadillo.so.9  libarmadillo.so.9.900.3
dependecies/armadillo/InstallFiles/: ArmadilloConfigVersion.cmake
dependecies/armadillo/tmp/include/armadillo_bits/: config.hpp
dependecies/armadillo/tmp/misc/: armadillo.pc
dependecies/unsupported/Eigen/CXX11/src/Tensor/: TensorMap.h
include/: TAJIVE.h  TensorDyn.h
src/: TAJIVE.cpp  TensorDyn.cpp
